# ros2_eval_task

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  compose.yml  package.xml
include/ros2_eval_task/: gazebo_utils_client.hpp
launch/: gazebo.launch.py
models/battery_9v_leader/: model.config  model.sdf
models/battery_9v_leader/meshes/: Untitled.dae
models/battery_energizer/: model.config  model.sdf
models/battery_energizer/meshes/: Untitled.stl  battery_energizer.dae
models/battery_varita/: model.config  model.sdf
models/battery_varita/meshes/: battery_varita.dae
models/lipo_battery/: model.config  model.sdf
models/lipo_battery/meshes/: Untitled.dae
models/workcell/meshes/: mesh.dae
ros2_eval_task/: gazebo_utils_client.cpp  model_spawner_node.cpp
rviz/: default.rviz
worlds/: factory.world
