<?xml version="1.0"?>
<package format="3">

  <name>ros2_eval_task</name>
  <version>0.0.1</version>
  <description>camera-based perception tasks pkg</description>
  <license>MIT</license>

  <maintainer email="ahmed.hanie@sigma.eg">Hanie</maintainer>
  <author email="ahmed.hanie@sigma.eg">Hanie</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>ament_index_python</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
